@@ -5,15 +5,12 @@ import com.gmail.nossr50.locale.LocaleLoader;
 import com.gmail.nossr50.mcMMO;
 import com.gmail.nossr50.util.Permissions;
 import com.gmail.nossr50.util.text.TextComponentFactory;
-import com.google.common.collect.ImmutableList;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabExecutor;
 import org.bukkit.entity.Player;
-import org.bukkit.util.StringUtil;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.ArrayList;
 import java.util.List;
 
 /**
@@ -26,14 +23,14 @@ public class MmoInfoCommand implements TabExecutor {
         /*
          * Only allow players to use this command
          */
-        if(commandSender instanceof Player player)
+        if (commandSender instanceof Player player)
         {
-            if(args == null || args.length < 1 || args[0] == null || args[0].isEmpty())
+            if (args == null || args.length < 1 || args[0] == null || args[0].isEmpty())
                 return false;
 
-            if(Permissions.mmoinfo(player))
+            if (Permissions.mmoinfo(player))
             {
-                if(args[0].equalsIgnoreCase( "???"))
+                if (args[0].equalsIgnoreCase( "???"))
                 {
                     player.sendMessage(LocaleLoader.getString("Commands.MmoInfo.Header"));
                     player.sendMessage(LocaleLoader.getString("Commands.MmoInfo.SubSkillHeader", "???"));
@@ -43,7 +40,7 @@ public class MmoInfoCommand implements TabExecutor {
                 }
 
                 final SubSkillType subSkillType = matchSubSkill(args[0]);
-                if  (subSkillType != null) {
+                if (subSkillType != null) {
                     displayInfo(player, subSkillType);
                 } else {
                     //Not a real skill
@@ -59,7 +56,7 @@ public class MmoInfoCommand implements TabExecutor {
     public SubSkillType matchSubSkill(String name) {
         for(SubSkillType subSkillType : SubSkillType.values())
         {
-            if(subSkillType.getNiceNameNoSpaces(subSkillType).equalsIgnoreCase(name)
+            if (subSkillType.getNiceNameNoSpaces(subSkillType).equalsIgnoreCase(name)
                     || subSkillType.name().equalsIgnoreCase(name))
                 return subSkillType;
         }
@@ -69,9 +66,9 @@ public class MmoInfoCommand implements TabExecutor {
     @Override
     public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String alias, String[] args) {
         if (args.length == 1) {
-            return StringUtil.copyPartialMatches(args[0], mcMMO.p.getSkillTools().EXACT_SUBSKILL_NAMES, new ArrayList<>(mcMMO.p.getSkillTools().EXACT_SUBSKILL_NAMES.size()));
+            return mcMMO.p.getSkillTools().EXACT_SUBSKILL_NAMES.stream().filter(s -> s.startsWith(args[0])).toList();
         }
-        return ImmutableList.of();
+        return List.of();
     }
 
     private void displayInfo(Player player, SubSkillType subSkillType)
