@@ -11,35 +11,35 @@ import com.gmail.nossr50.util.player.UserManager;
 import com.gmail.nossr50.util.skills.SkillTools;
 import com.gmail.nossr50.util.skills.SkillUtils;
 import com.gmail.nossr50.util.text.StringUtils;
-import com.google.common.collect.ImmutableList;
 import org.bukkit.OfflinePlayer;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
 
 public final class CommandUtils {
-    public static final List<String> TRUE_FALSE_OPTIONS = ImmutableList.of("on", "off", "true", "false", "enabled", "disabled");
-    public static final List<String> RESET_OPTIONS = ImmutableList.of("clear", "reset");
+    public static final List<String> TRUE_FALSE_OPTIONS = List.of("on", "off", "sim", "nao");
+    public static final List<String> RESET_OPTIONS = List.of("limpar", "resetar");
+    public static final List<String> TRUE_OPTIONS = List.of("on", "true", "enabled", "ativar", "sim");
+    public static final List<String> FALSE_OPTIONS = List.of("off", "false", "disabled", "desativar", "nao");
 
-    private CommandUtils() {}
+    private CommandUtils() {
+    }
 
     public static boolean isChildSkill(CommandSender sender, PrimarySkillType skill) {
-        if (skill == null || !SkillTools.isChildSkill(skill)) {
-            return false;
-        }
-
-        sender.sendMessage("Child skills are not supported by this command."); // TODO: Localize this
+        if (skill == null || !SkillTools.isChildSkill(skill)) return false;
+        sender.sendMessage("Skill secundária ainda não tem suporte para este comando!"); // TODO: Localize this
         return true;
     }
 
     public static boolean tooFar(CommandSender sender, Player target, boolean hasPermission) {
-        if(!target.isOnline() && !hasPermission) {
+        if (!target.isOnline() && !hasPermission) {
             sender.sendMessage(LocaleLoader.getString("Inspect.Offline"));
             return true;
-        } else if (sender instanceof Player && !Misc.isNear(((Player) sender).getLocation(), target.getLocation(), mcMMO.p.getGeneralConfig().getInspectDistance()) && !hasPermission) {
+        } else if (sender instanceof Player player && !Misc.isNear(player.getLocation(), target.getLocation(), mcMMO.p.getGeneralConfig().getInspectDistance()) && !hasPermission) {
             sender.sendMessage(LocaleLoader.getString("Inspect.TooFar"));
             return true;
         }
@@ -48,22 +48,11 @@ public final class CommandUtils {
     }
 
     public static boolean hidden(CommandSender sender, Player target, boolean hasPermission) {
-        return sender instanceof Player && !((Player) sender).canSee(target) && !hasPermission;
-    }
-
-    public static boolean noConsoleUsage(CommandSender sender) {
-        if (sender instanceof Player) {
-            return false;
-        }
-
-        sender.sendMessage(LocaleLoader.getString("Commands.NoConsole"));
-        return true;
+        return sender instanceof Player player && !player.canSee(target) && !hasPermission;
     }
 
     public static boolean isOffline(CommandSender sender, OfflinePlayer player) {
-        if (player.isOnline()) {
-            return false;
-        }
+        if (player.isOnline()) return false;
 
         sender.sendMessage(LocaleLoader.getString("Commands.Offline"));
         return true;
@@ -72,10 +61,9 @@ public final class CommandUtils {
     /**
      * Checks if there is a valid mcMMOPlayer object.
      *
-     * @param sender CommandSender who used the command
-     * @param playerName name of the target player
+     * @param sender      CommandSender, who used the command
+     * @param playerName  name of the target player
      * @param mcMMOPlayer mcMMOPlayer object of the target player
-     *
      * @return true if the player is online and a valid mcMMOPlayer object was found
      */
     public static boolean checkPlayerExistence(CommandSender sender, String playerName, McMMOPlayer mcMMOPlayer) {
@@ -98,18 +86,13 @@ public final class CommandUtils {
     }
 
     public static boolean unloadedProfile(CommandSender sender, PlayerProfile profile) {
-        if (profile.isLoaded()) {
-            return false;
-        }
-
+        if (profile.isLoaded()) return false;
         sender.sendMessage(LocaleLoader.getString("Commands.Offline"));
         return true;
     }
 
     public static boolean hasPlayerDataKey(CommandSender sender) {
-        if (!(sender instanceof Player)) {
-            return false;
-        }
+        if (!(sender instanceof Player)) return false;
 
         boolean hasPlayerDataKey = ((Player) sender).hasMetadata(MetadataConstants.METADATA_KEY_PLAYER_DATA);
 
@@ -121,47 +104,38 @@ public final class CommandUtils {
     }
 
     public static boolean isLoaded(CommandSender sender, PlayerProfile profile) {
-        if (profile.isLoaded()) {
-            return true;
-        }
-
+        if (profile.isLoaded()) return true;
         sender.sendMessage(LocaleLoader.getString("Commands.NotLoaded"));
         return false;
     }
 
     public static boolean isInvalidInteger(CommandSender sender, String value) {
-        if (StringUtils.isInt(value)) {
-            return false;
-        }
+        if (StringUtils.isInt(value)) return false;
 
         sender.sendMessage("That is not a valid integer."); // TODO: Localize
         return true;
     }
 
     public static boolean isInvalidDouble(CommandSender sender, String value) {
-        if (StringUtils.isDouble(value)) {
-            return false;
-        }
+        if (StringUtils.isDouble(value)) return false;
 
         sender.sendMessage("That is not a valid percentage."); // TODO: Localize
         return true;
     }
 
     public static boolean isInvalidSkill(CommandSender sender, String skillName) {
-        if (SkillUtils.isSkill(skillName)) {
-            return false;
-        }
+        if (SkillUtils.isSkill(skillName)) return false;
 
         sender.sendMessage(LocaleLoader.getString("Commands.Skill.Invalid"));
         return true;
     }
 
     public static boolean shouldEnableToggle(String arg) {
-        return arg.equalsIgnoreCase("on") || arg.equalsIgnoreCase("true") || arg.equalsIgnoreCase("enabled");
+        return TRUE_OPTIONS.contains(arg.toLowerCase(Locale.ENGLISH));
     }
 
     public static boolean shouldDisableToggle(String arg) {
-        return arg.equalsIgnoreCase("off") || arg.equalsIgnoreCase("false") || arg.equalsIgnoreCase("disabled");
+        return FALSE_OPTIONS.contains(arg.toLowerCase(Locale.ENGLISH));
     }
 
     /**
@@ -206,21 +180,21 @@ public final class CommandUtils {
         printMiscSkills(player, player);
     }
 
-    public static String displaySkill(PlayerProfile profile, PrimarySkillType skill) {
+    public static @NotNull String displaySkill(PlayerProfile profile, PrimarySkillType skill) {
         if (SkillTools.isChildSkill(skill)) {
-            return LocaleLoader.getString("Skills.ChildStats", LocaleLoader.getString(StringUtils.getCapitalized(skill.toString()) + ".Listener") + " ", profile.getSkillLevel(skill));
+            return LocaleLoader.getString("Skills.ChildStats", LocaleLoader.getString(StringUtils.getCapitalized(skill.toString()) + ".Listener") + " ", StringUtils.formatNumber(profile.getSkillLevel(skill)));
         }
-        if (profile.getSkillLevel(skill) == mcMMO.p.getSkillTools().getLevelCap(skill)){
-            return LocaleLoader.getString("Skills.Stats", LocaleLoader.getString(StringUtils.getCapitalized(skill.toString()) + ".Listener") + " ", profile.getSkillLevel(skill), profile.getSkillXpLevel(skill), LocaleLoader.getString("Skills.MaxXP"));
+        if (profile.getSkillLevel(skill) == mcMMO.p.getSkillTools().getLevelCap(skill)) {
+            return LocaleLoader.getString("Skills.Stats", LocaleLoader.getString(StringUtils.getCapitalized(skill.toString()) + ".Listener") + " ", StringUtils.formatNumber(profile.getSkillLevel(skill)), StringUtils.formatNumber(profile.getSkillXpLevel(skill)), LocaleLoader.getString("Skills.MaxXP"));
         }
-        return LocaleLoader.getString("Skills.Stats", LocaleLoader.getString(StringUtils.getCapitalized(skill.toString()) + ".Listener") + " ", profile.getSkillLevel(skill), profile.getSkillXpLevel(skill), profile.getXpToLevel(skill));
+        return LocaleLoader.getString("Skills.Stats", LocaleLoader.getString(StringUtils.getCapitalized(skill.toString()) + ".Listener") + " ", StringUtils.formatNumber(profile.getSkillLevel(skill)), StringUtils.formatNumber(profile.getSkillXpLevel(skill)), StringUtils.formatNumber(profile.getXpToLevel(skill)));
     }
 
     private static void printGroupedSkillData(Player inspectTarget, CommandSender display, String header, List<PrimarySkillType> skillGroup) {
-        if(UserManager.getPlayer(inspectTarget) == null)
-            return;
+        var mcMMOPlayer = UserManager.getPlayer(inspectTarget);
+        if (mcMMOPlayer == null) return;
 
-        PlayerProfile profile = UserManager.getPlayer(inspectTarget).getProfile();
+        PlayerProfile profile = mcMMOPlayer.getProfile();
 
         List<String> displayData = new ArrayList<>();
         displayData.add(header);
@@ -239,7 +213,7 @@ public final class CommandUtils {
     }
 
     public static List<String> getOnlinePlayerNames(CommandSender sender) {
-        Player player = sender instanceof Player ? (Player) sender : null;
+        Player player = sender instanceof Player p ? p : null;
         List<String> onlinePlayerNames = new ArrayList<>();
 
         for (Player onlinePlayer : mcMMO.p.getServer().getOnlinePlayers()) {
@@ -255,7 +229,6 @@ public final class CommandUtils {
      * Get a matched player name if one was found in the database.
      *
      * @param partialName Name to match
-     *
      * @return Matched name or {@code partialName} if no match was found
      */
     public static String getMatchedPlayerName(String partialName) {
@@ -265,8 +238,7 @@ public final class CommandUtils {
             if (matches.size() == 1) {
                 partialName = matches.get(0);
             }
-        }
-        else {
+        } else {
             Player player = mcMMO.p.getServer().getPlayer(partialName);
 
             if (player != null) {
@@ -279,7 +251,6 @@ public final class CommandUtils {
 
     /**
      * Attempts to match any player names with the given name, and returns a list of all possibly matches.
-     *
      * This list is not sorted in any particular order.
      * If an exact match is found, the returned list will only contain a single result.
      *
@@ -291,10 +262,10 @@ public final class CommandUtils {
 
         for (OfflinePlayer offlinePlayer : mcMMO.p.getServer().getOfflinePlayers()) {
             String playerName = offlinePlayer.getName();
-            
+
             if (playerName == null) { //Do null checking here to detect corrupted data before sending it throuogh .equals
-            	System.err.println("[McMMO] Player data file with UIID " + offlinePlayer.getUniqueId() + " is missing a player name. This may be a legacy file from before bukkit.lastKnownName. This should be okay to ignore.");
-            	continue; //Don't let an error here interrupt the loop
+                mcMMO.p.getLogger().warning("Player data file with UUID " + offlinePlayer.getUniqueId() + " is missing a player name. This may be a legacy file from before bukkit.lastKnownName. This should be okay to ignore.");
+                continue; //Don't let an error here interrupt the loop
             }
 
             if (partialName.equalsIgnoreCase(playerName)) {
